<resources>
    <string name="app_name">Native Android App </string>
    <string name="app_confirm">Confirm Page</string>
    <string name="tv_username">Name</string>
    <string name="tv_password">Address</string>
    <string name="tv_bedroom"></string>
    <string name="btn_login">Login</string>
    <string name="select_type">Select Type</string>
    <string name="select_future">Select Furniture</string>
    <string name="et_name">Enter Name</string>
    <string name="et_address">Enter Address</string>
    <string name="et_bedrooms">Enter Bedrooms</string>
    <string name="et_price">Enter Price</string>
    <string name="et_reporter">Enter Reporter</string>
    <string name="et_note">Enter Note</string>
</resources>