<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="10dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_name"
        android:layout_margin="12dp"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/teal_700"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_name"
            android:hint="@string/et_name"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:endIconMode="clear_text"
        android:id="@+id/til_address"
        app:errorEnabled="true"
        app:hintTextColor="@color/teal_700"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_address"
            android:hint="@string/et_address"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:errorEnabled="true"
        android:id="@+id/til_type"
        android:hint="@string/select_type">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:errorEnabled="true"
        android:id="@+id/til_furniture"
        android:hint="@string/select_future">

        <AutoCompleteTextView
            android:id="@+id/auto_future_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:endIconMode="clear_text"
        android:id="@+id/til_bedrooms"
        app:errorEnabled="true"
        app:hintTextColor="@color/teal_700"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_bedrooms"
            android:hint="@string/et_bedrooms"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:endIconMode="clear_text"
        android:id="@+id/til_price"
        app:errorEnabled="true"
        app:hintTextColor="@color/teal_700"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_price"
            android:hint="@string/et_price"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:endIconMode="clear_text"
        android:id="@+id/til_reporter"
        app:errorEnabled="true"
        app:hintTextColor="@color/teal_700"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_reporter"
            android:hint="@string/et_reporter"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:endIconMode="clear_text"
        android:id="@+id/til_note"
        app:errorEnabled="true"
        app:hintTextColor="@color/teal_700"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_note"
            android:hint="@string/et_note"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_submit"
        android:text="Submit"
        android:padding="12dp"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="15dp">
    </com.google.android.material.button.MaterialButton>
    </LinearLayout>
</ScrollView>